# Mana-Engine

./: .gitignore  CMakeLists.txt  README.md
include/Mana/: astar.hpp  gridnode.hpp  squaregridgraph.hpp  test.hpp
src/: gridnode.cpp  test.cpp
tests/: CMakeLists.txt  astar.cpp  gridnode.cpp  main.cpp  squaregridgraph.cpp
